new-manifests/database-statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-ss
  namespace: dev
spec:
  replicas: 1
  serviceName: mysqldb
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      name: temp1
      labels:
        app: database
    spec:
      containers:
        - name: db
          image: manju9676/hopegiversbloodbank-database:30
          securityContext:
            fsGroup: 999
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-pvc
              mountPath: /var/lib/mysql
              subPath: mysql-data
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            exec:
              command: ["mysqladmin", "ping", "-h", "127.0.0.1"]
            initialDelaySeconds: 10
            periodSeconds: 10



  volumeClaimTemplates:
    - metadata:
        name: mysql-pvc
      spec:
        storageClassName: aws-ebs
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
