new-manifests/database-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
  namespace: dev
spec:
  clusterIP: None
  selector:
    app: database
  ports:
    - port: 3306
      targetPort: 3306
