new-manifests/frontend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: dev
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
